# VkDemo

./: .gitignore  .gitmodules  .tasks  .vimspector.json  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  VKContext.hpp  bar  frag.spv  main.cpp  main2.cpp  test.frag  test.vert  tospirv.sh  vert.spv
include/: SPIRVConverter.h  VKContext.hpp
shader/: cubefrag.glsl  cubevert.glsl  raycastfrag.glsl  raycastvert.glsl  test.vert  triangle_f.frag  triangle_v.vert
src/: SPIRVConverter.cpp  main.cpp  main2.cpp  mesh.cpp  vol.cpp
test/: CMakeLists.txt  test_spirv.cpp
